# sortify

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_and_test.sh  commit_message.txt  delete_original.sh  make_executable.sh  make_scripts_executable.sh  run_tests.sh  sortify.sh
.cache/clangd/index/: audio_fingerprint.hpp.D7ECCAFA164E7B82.idx  audio_reader.cpp.D280C3E1A8AF722B.idx  audio_reader.hpp.7F9F93930998C903.idx  fingerprint.cpp.4907481ECF13066F.idx  logger.cpp.8D90CF46A26A0E64.idx  logger.hpp.FA9FD54C1F733C56.idx  peak_extraction.cpp.ADC29A33EA5F5FE1.idx  result.hpp.A94FE4DAD673A01E.idx  spectrogram.cpp.07976819CDD69A6B.idx
src/cpp/: CMakeLists.txt
src/cpp/include/: audio_fingerprint.hpp  audio_reader.hpp  logger.hpp  result.hpp
src/cpp/src/: audio_fingerprint.cpp  audio_reader.cpp  fingerprint.cpp  logger.cpp  peak_extraction.cpp  spectrogram.cpp
src/cpp/tests/: CMakeLists.txt  CTestTestfile.cmake  audio_comparison_test.cpp  download_audifile.sh  fingerprint_test.cpp
tests/: CMakeLists.txt  run_tests.sh  test_fingerprint.cpp
tests/cpp/: audio_comparison_test.cpp
tests/cpp/include/: AudioFile.h  AudioReader.h
